--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css?family=Metal+Mania");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin:0;
+  padding:0;
+  text-decoration: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  display:flex;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
+  width: 100%;
+  background-color: rgb(209, 209, 209);
+}
+.sidebar{
+  background: #ffffff;
+  color: #adada9;
+  height: 100vh;
+  width: 250px;
+  transition: all 0.5s;
+}
+.top_section{
   display: flex;
-  flex-direction: column;
+  align-items:center;
+  padding:20px 15px;
+}
+.logo{
+  font-size: 30px;
+}
+.bars{
+  display: flex;
+  font-size: 25px;
+  margin-left: 50px;
+}
+.link{
+  display: flex;
+  color: #adada9;
+  padding: 10px 15px;
+  gap: 15px;
+  transition: all 0.5s;
+}
+.link:hover{
+  background:rgb(206, 207, 207);
+  color: #000000;
+  transition: all 0.5s;
+}
+.active{
+  background: rgb(209, 209, 209);
+  color: #18c2ec;
+}
+.active:hover{
+  background-color: rgb(90, 90, 90);
+}
+.icon, .link_text{
+  font-size: 20px;
+}
+.sidebar_content{
+  margin-top: 50% ;
+}
+
+.content-section {
+  margin: 1em;
+}
+
+.container-section {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 1.5em;
+}
+.tour-row {
+  border-bottom: 1px solid black;
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+}
+
+.tour-row:last-child {
+  border: none;
+}
+
+.tour-item {
+  display: inline-block;
+  padding-right: .5em;
+}
+
+.tour-date {
+  color: #555;
+  width: 11%;
+  font-weight: bold;
+}
+
+.tour-city {
+  width: 24%;
+}
+
+.tour-arena {
+  width: 42%;
+}
+
+.tour-btn {
+  max-width: 19%;
+}
+
+.cart-item-image {
+  border-radius: 25px;
+  width: 30%;
+  height: 70%;
+}
+
+.match-row{
+  margin: 2px 0;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+}
+
+.match-column{
   align-items: center;
+  display: flex;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.versus-icon{
+  width:5%;
+}
+
+.section-header {
+  font-family: "Metal Mania";
+  font-weight: normal;
+  color: #333;
+  text-align: center;
+  font-size: 2.5em;
+}
+
+.cart-item-title {
+  color: #333;
+  margin-left: .5em;
+  font-size: 1.3vw;
+  font-weight: bold;
+}
+
+.cart-price {
+  font-size: 1vw;
+  color: #333;
+}
+
+.team-name{
+  
+  align-items: center;
+  display: flex;
+  width: 22.5%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.poster{
+  margin: 0;
+  width: 75%;
+  height: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+div.shadow {
+  width: 100%;
+  text-align: center; 
+}
+.icon-size{
+  font-size: 30px;
+}
+
+@media only screen and (max-width: 500px) {
+  .icon-size {
+    font-size: 17px;
   }
-  to {
-    transform: rotate(360deg);
+}
+.icon-heart{
+  font-size: 30px;
+  color:red;
+}
+
+@media only screen and (max-width: 500px) {
+  .icon-heart {
+    font-size: 15px;
   }
+}
+
+.content-width{
+  width: 16.66%;
+}
+
+.time-padding{
+  padding-left: 2%;
 }
