--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,12 @@ main{
   transition: all 0.5s;
 }
 .active{
-  background: rgb(209, 209, 209);
+  border-left: solid #000000 4px;
+  background: linear-gradient(to right,rgb(209, 209, 209),white);
   color: #18c2ec;
 }
 .active:hover{
-  background-color: rgb(90, 90, 90);
+  background-color: linear-gradient(to right,rgb(90, 90, 90),white);
 }
 .icon, .link_text{
   font-size: 20px;
